# trs_1

./: CMakeLists.txt  kraeva9.mw  report1.docx  Лабораторная работа ТРС 1.docx  ТРС_лр_1.pptx
lab1cmake/: CMakeLists.txt  lab1.2.cpp  lab1.3.cpp  lab1.4.cpp  lab1.5.cpp  lab1cmake.cpp  lab1cmake.h
